# ABC

./: .dockerignore  .env.template  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  __main__.py  program.md  pyproject.toml  requirements-dev.txt  requirements.txt  research_daemon.py  score_round.py  todo.md
TM/: README.md
api/: __init__.py  __main__.py  app.py
config/: agent_prompt.txt  ibkr_config.ini  trading.yaml
core/: __init__.py  _system_prompt_template.txt  agent.py  async_utils.py  central_profit_config.py  config.py  daily_summary.py  entry_cli.py  grok_llm.py  json_parse.py  live_profile_optimize.py  log_context.py  log_setup.py  loop_config.py  memory_config.py  optimizer_backtest.py  profile_ab_test.py  profile_genetic.py  profile_optimization.py  profile_rollback.py  profit_config_context.py  profit_config_state.py  profit_cycle_logger.py  profit_profile_cache.py  profit_profiles.py  profit_summary.py  prompt_config.py  research_settings.py  research_topics.py  risk_execution_config.py  settings.py  strategy_evolution.py  tool_registry.py  wake_events.py
data/: __init__.py  broker_gateway.py  cost_tracker.py  data_provider.py  economic_calendar.py  ibkr_quote_source.py  live_state.py  market_hours.py  marketdata_client.py  profit_metrics.py  xai_usage.py
docs/: PLAN_AUCTION_IMBALANCE.md  PLAN_COGNITIVE_ARCHITECTURE.md  POSTGRES_HOST_SETUP.md  PRODUCTION_LAUNCH_CHECKLIST.md  README.md  RESEARCH_HOST_TRADER_SETUP.md  change-impact-map.md  codebase-layout.md  data-sources.md  engineering.md  entry-points.md  plain-english-glossary.md  policy-independent-mode-memory.md  signal-formula-spec.md  simulation-and-optimization.md  stabilization-pr-checklist.md
execution/: __init__.py  ibkr_connection.py  ibkr_core.py  ibkr_gateway.py  ibkr_options.py  ibkr_orders.py  ibkr_queries.py  ibkr_utils.py  order_types.py
infra/: __init__.py  deploy.ps1  deploy.py
memory/: __init__.py  abc.db-shm  session_state.py  working_memory.py
research/: README.md  __init__.py  __main__.py  agent.py  config.py  daemon.py  environment.py  host.py  promoter.py  replay.py  simulator.py  strategy.py
scripts/: _check_research_writes.py  alert_watch.py  backup_postgres.ps1  check_researcher.py  check_trader.py  daily_summary.py  dashboard.py  dashboard_html.py  docker_healthcheck.py  evolve_strategy.py  health.py  health_common.py  optimize_profiles.py  patch_structlog_loggers.py  run_research.ps1  run_research_daemon.ps1  smoke_all_tools.py  smoke_order_tools.py  smoke_tools.py  smoke_trader_tools.py  train_quality_matrix.py  validate_profit_e2e.py  verify_trader_db.py  watch_research.ps1
signals/: __init__.py  analyst.py  auction_imbalance.py  base.py  beta_adjusted_momentum.py  breadth.py  breakout.py  briefing.py  candidate_lifecycle.py  (+52 more)
(+260 files in other folders)
