# Project metadata (optional). Install runtime deps from requirements.txt:
#   pip install -r requirements.txt
#
# Pytest reads [tool.pytest.ini_options] from this file (no separate pytest.ini).

[project]
name = "abc-grok-trader"
version = "0.0.0"
description = "Grok autonomous trader — research daemon + IBKR trader"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
