# Project metadata (optional). Install runtime deps from requirements.txt:
#   pip install -r requirements.txt
#
# Pytest reads [tool.pytest.ini_options] from this file (no separate pytest.ini).

[project]
name = "abc-grok-trader"
version = "0.0.0"
description = "Grok autonomous trader — research host (python -m research) + IBKR trader"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pylint>=3.3.0",
    "types-requests>=2.32.0",
    "pandas-stubs>=2.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["core", "tools", "scripts", "tests", "signals", "research", "memory", "data", "execution"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Handler registry must load after ToolExecutor / handler defs to avoid import cycles.
"tools/tools_executor.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["core", "tools", "scripts", "signals", "research", "memory", "data", "execution", "infra"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
ignore_missing_imports = true
check_untyped_defs = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "xai_sdk.*",
    "ib_insync.*",
    "structlog.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "research.*",
    "signals.*",
    "data.*",
    "memory.repos.*",
    "execution.*",
]
ignore_errors = true

# Hotspot / dict-param tool modules: strict typing deferred (ruff covers F821/F841).
[[tool.mypy.overrides]]
module = [
    "core.agent",
    "tools.tools_options",
    "tools.tools_executor",
    "tools.tools_instruments",
]
ignore_errors = true

[tool.pylint.main]
py-version = "3.11"
jobs = 0
ignore-paths = [
    "^tests/",
    "^\\.venv/",
]

[tool.pylint.messages_control]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "R0913",
    "R0914",
    "R0915",
    "W0511",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
